overflow prevent

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     justify-content: center;
 }
 .search-bar{
+    max-width: 100%;
     outline: 0;
     border: 0;
     background: #ebfffc;
